--- a/lstm_train.ipynb
+++ b/lstm_train.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "# Upload the data frame into the notebook\n",
     "data_frame = pd.read_csv('Data/learn_noise_siso2.csv')\n",
-    "test_frame = pd.read_csv('Data/test_jump_siso2.csv')"
+    "test_frame = pd.read_csv('Data/test_jump_siso2.csv')\n",
+    "prediction_test_frame = pd.read_csv('Data/test_jump_siso2.csv', nrows=6)"
    ]
   },
   {
@@ -345,13 +346,17 @@
     "\n",
     "y = df.values.astype(float)\n",
     "y_test = test_frame.values.astype(float)\n",
+    "y_pred_test = prediction_test_frame.values.astype(float)\n",
+    "\n",
     "# Create train and test sets\n",
     "train_set = y\n",
     "test_set = y_test\n",
-    "\n",
+    "pred_test_set = y_pred_test\n",
+    "print(test_set)\n",
     "# Convert train set into a torch tensor\n",
     "train_set = torch.FloatTensor(train_set).view(-1,df.shape[1])\n",
-    "test_set = torch.FloatTensor(test_set).view(-1,df.shape[1])"
+    "test_set = torch.FloatTensor(test_set).view(-1,df.shape[1])\n",
+    "pred_test_set= torch.FloatTensor(pred_test_set).view(-1,df.shape[1])"
    ]
   },
   {
@@ -679,6 +684,64 @@
    "source": [
     "RMSE = np.sqrt(np.sum(np.square((predictions - true_values[:,0])))/predictions.size)\n",
     "display(RMSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "future=100\n",
+    "\n",
+    "preds = [test_set[0,:1].reshape(-1,1)]\n",
+    "print(test_set[0,:1])\n",
+    "print(preds)\n",
+    "\n",
+    "for i in range(future-1):\n",
+    "    if i < len(pred_test_set):\n",
+    "        seq = test_set[i].reshape(-1, 2)\n",
+    "    else:\n",
+    "        x = torch.FloatTensor(preds[-1])  # Assuming preds[-1] contains the last prediction\n",
+    "        y = 1.0\n",
+    "        seq = torch.FloatTensor([x, y]).view(-1, df.shape[1])\n",
+    "            \n",
+    "    # Check if the sequence length is greater than 0\n",
+    "    if seq.size(0) > 0:\n",
+    "        # Informing PyTorch that I am no longer interested in the gradients\n",
+    "        with torch.no_grad():\n",
+    "            # Initialize the hidden states\n",
+    "            model.hidden_1 = (torch.zeros(1, 1, model.hidden_size_1),\n",
+    "                              torch.zeros(1, 1, model.hidden_size_1))\n",
+    "            model.hidden_2 = (torch.zeros(1, 1, model.hidden_size_2),\n",
+    "                              torch.zeros(1, 1, model.hidden_size_2))\n",
+    "            \n",
+    "            preds.append(model(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions2 = np.array([pred.numpy() for pred in preds]).reshape(-1,1)\n",
+    "true_values = np.array(test_set[:,:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(16,10))\n",
+    "plt.plot(predictions2[:,0],'g',label='Self predicted')\n",
+    "plt.plot(predictions[:,0],'b',label='Prediction')\n",
+    "plt.plot(true_values[:,0],'r',label='True Value')\n",
+    "plt.legend()\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('x1')"
    ]
   }
  ],
